Разделить подписку и активный ключ
